--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
-    "generate": "ts-node --transpile-only src/schema.ts"
+    "generate": "ts-node --transpile-only src/schema.ts",
+    "db": "npx prisma generate & npx prisma db push"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,15 @@
   },
   "homepage": "https://github.com/Abdulkeza/Flash-Cards-App#readme",
   "dependencies": {
+    "@prisma/client": "^3.15.1",
+    "@types/node": "^17.0.41",
     "apollo-server": "^3.8.2",
     "graphql": "^16.5.0",
-    "nexus": "^1.3.0"
+    "nexus": "^1.3.0",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
+    "prisma": "^3.15.1",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0"
   }
